# rsAruco

./: README.md
PosePCview/: .main.cpp.swp  CMakeLists.txt  main.cpp
calibration_params/: calibration_paramsD4352.yml  calibration_paramsD435i2.yml
coodiTransAruco/: CMakeLists.txt  main.cpp
detect_markers/: CMakeLists.txt  calibration_params.yml  calibration_paramsD4151.yml  calibration_paramsD435i2.yml  main.cpp
make_markers/: main.cpp
onecoodiTrans/: .main.cpp.swp  main.cpp
