cmake_minimum_required(VERSION 3.5)
project(realsence)
set(CMAKE_CXX_STANDARD 14)
set(REALSENSE2_DIR "/usr/include/librealsense2")
find_package(realsense2 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(PCL 1.8 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(dtcmark main.cpp)
target_link_libraries (dtcmark ${PCL_LIBRARIES})
target_link_libraries(dtcmark ${OpenCV_LIBS})
if(realsense2_FOUND)
    include_directories(${realsense_INCLUDE_DIR})
    target_link_libraries(dtcmark ${realsense2_LIBRARY})
endif()
